# gnu_dev_homeworks

./: README.md
02_BuildReq/: hello_world.c
03_TerminalProject/: makefile  show.c
04_Multifile/: makefile  prog.c  test.sh
05_Environmental/: CMakeLists.txt  own_regexp.c  own_regexp.h  window.c
06_Debugging/: Makefile  main.c
07_DebuggingTracing/: CMakeLists.txt  README.MD  main.c  test.sh  wrapper.c
07_DebuggingTracing/tests/: can_remove_test.sh  cant_remove_test.sh
08_TestingCoverage/: CMakeLists.txt  buf.c  buf.h  readme.md  tests.c
09_I18nL10n/: CMakeLists.txt  main.c
10_Documenting/: CMakeLists.txt  game.po  main.c
11_Toolkits/: CMakeLists.txt  counter.c
13_PatchInstall/: CMakeLists.txt  game.po  game.pot
